@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: @PACKAGE_NAME@
+Description: C++ library for flexible logging, modeled after Log4j.
+Version: @PACKAGE_VERSION@
+Requires: 
+Libs: -L${libdir} -llog4cpp
+Cflags: -I${includedir}
