@@ -1,5 +1,8 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2003-05-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* log4cpp.pc.in, configure.in, Makefile.am: added pkgconfig file.
+	
 2003-04-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* log4cpp.spec.in: added log4cpp.m4 to -devel package.
 	
